<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/broad_line_ash_bg">

    <RelativeLayout android:id="@+id/amd_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp">
        <TextView android:id="@+id/amd_tv_dsno_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dsno"
            android:textStyle="bold"
            android:textColor="#5e5e5e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>
        <TextView android:id="@+id/amd_tv_dsno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DSlip No**"
            android:textColor="#4e4e4e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:layout_toRightOf="@+id/amd_tv_dsno_text"/>
        <TextView android:id="@+id/amd_tv_btype_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_type"
            android:textStyle="bold"
            android:textColor="#5e5e5e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/amd_tv_dsno"
            android:visibility="gone"/>
        <TextView android:id="@+id/amd_tv_btype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Booking Type**"
            android:textColor="#4e4e4e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:layout_toRightOf="@+id/amd_tv_btype_text"
            android:layout_below="@+id/amd_tv_dsno"
            android:visibility="gone"/>
        <TextView android:id="@+id/amd_tv_rdate_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reporting_date"
            android:textColor="#5e5e5e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:layout_below="@+id/amd_tv_btype"/>
        <TextView android:id="@+id/amd_tv_rdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rep. Date**"
            android:textColor="#4e4e4e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:layout_toRightOf="@+id/amd_tv_rdate_text"
            android:layout_below="@+id/amd_tv_btype"/>
        <TextView android:id="@+id/amd_tv_rtime_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reporting_time"
            android:textStyle="bold"
            android:textColor="#5e5e5e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/amd_tv_rdate"/>
        <TextView android:id="@+id/amd_tv_rtime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rep. Time**"
            android:textColor="#4e4e4e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:layout_toRightOf="@+id/amd_tv_rtime_text"
            android:layout_below="@+id/amd_tv_rdate"/>
        <TextView android:id="@+id/amd_tv_pickup_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reporting_place"
            android:textStyle="bold"
            android:textColor="#5e5e5e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/amd_tv_rtime" />
        <TextView android:id="@+id/amd_tv_pickup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Pickup Loc **"
            android:textColor="#4e4e4e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:layout_toRightOf="@+id/amd_tv_pickup_text"
            android:layout_below="@+id/amd_tv_rtime" />
        <TextView android:id="@+id/amd_tv_travel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/travel"
            android:textStyle="bold"
            android:textColor="#5e5e5e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/amd_tv_pickup"
            android:visibility="gone"/>

        <TextView android:id="@+id/amd_tv_travel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Travel type**"
            android:textColor="#4e4e4e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:layout_toRightOf="@+id/amd_tv_travel_text"
            android:layout_below="@+id/amd_tv_pickup"
            android:visibility="gone"/>
        <TextView android:id="@+id/amd_tv_gname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_name"
            android:textStyle="bold"
            android:textColor="#5e5e5e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/amd_tv_pickup"/>
        <TextView android:id="@+id/amd_tv_gname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="G name**"
            android:textColor="#4e4e4e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:layout_toRightOf="@+id/amd_tv_gname_text"
            android:layout_below="@+id/amd_tv_pickup"/>
        <TextView android:id="@+id/amd_tv_gmobile_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/g_mobile"
            android:textStyle="bold"
            android:textColor="#5e5e5d"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/amd_tv_gname"/>
        <TextView android:id="@+id/amd_tv_gmobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="G mobile**"
            android:textColor="#4e4e4e"
            android:textSize="14sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="right"
            android:layout_toRightOf="@+id/amd_tv_gmobile_text"
            android:layout_below="@+id/amd_tv_gname"/>
        <Button android:id="@+id/amd_bt_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_below="@+id/amd_tv_gmobile_text"
            android:layout_centerHorizontal="true"
            android:layout_margin="18dp"
            android:background="@drawable/bt_stroke_bg" />
        <Button android:id="@+id/amd_bt_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_duty"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/amd_bt_accept"
            android:background="@drawable/bt_solid_bg"
            android:layout_centerInParent="true"
            android:padding="16dp"/>
    </RelativeLayout>

</LinearLayout>