<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:id="@+id/al_clayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorWhite">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:id="@+id/al_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40sp"
            android:gravity="center"
            android:padding="12dp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentTop="true"
            android:textAllCaps="true"
            android:layout_above="@+id/al_ll" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/al_ll"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/linearLayout">
        </LinearLayout>

        <LinearLayout android:id="@+id/al_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_margin="16dp">
            <EditText android:id="@+id/al_et_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:layout_margin="10dp"
                android:padding="12dp"
                android:background="@drawable/et_bg"
                android:textColorHint="@color/colorBlack"
                android:inputType="textEmailAddress"
                android:textColor="#4e4e4e"
                android:fontFamily="sans-serif-condensed"
                android:drawableRight="@drawable/username"/>

            <EditText android:id="@+id/al_et_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_margin="10dp"
                android:padding="12dp"
                android:background="@drawable/et_bg"
                android:textColorHint="@color/colorBlack"
                android:inputType="textPassword"
                android:textColor="#4e4e4e"
                android:fontFamily="sans-serif-condensed"
                android:drawableRight="@drawable/password"/>

            <EditText android:id="@+id/al_et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_code"
                android:layout_margin="10dp"
                android:padding="12dp"
                android:background="@drawable/et_bg"
                android:textColorHint="#8f8f8f"
                android:textColor="#4e4e4e"
                android:fontFamily="sans-serif-condensed"
                android:textStyle="bold"
                android:visibility="gone"/>

            <Button android:id="@+id/al_bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/bt_stroke_bg"
                android:padding="12dp"
                android:layout_margin="10dp"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:layout_alignParentBottom="true"/>

        </LinearLayout>



        <TextView android:id="@+id/al_tv_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="forgot password?"
            android:textColor="#4e4e4e"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_below="@+id/al_ll"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:visibility="gone"/>

        <ImageView android:id="@+id/al_iv"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/al_ll"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>